--- a/src/base/components/tabs.html
+++ b/src/base/components/tabs.html
@@ -2,11 +2,11 @@
     <style>
         :host {
             --tabgroup-background: transparent !important;
-            --tab-background: #1f1f1f !important;
+            --tab-background: transparent !important;
             --tab-color: #ffffff !important;
             --tab-border-color: transparent !important;
-            --tab-active-background: #303236 !important;
-            --tag-hover-background: #3d3d3d !important;
+            --tab-active-background: #34393c !important;
+            --tag-hover-background: #34393c !important;
             --button-font-size: 15px !important;
             --button-background: none !important;
             --button-color: #696a6c !important;
