--- a/src/base/components/settings.html
+++ b/src/base/components/settings.html
@@ -7,7 +7,7 @@
             <input style="width: -webkit-fill-available;" id="InstanceField" type="url" pattern="https?://.*" placeholder="https://design.penpot.app/" value=""/>
             <input id="InstanceSaveButton" type="button" value="Save" onclick="InstanceSave()" />
         </div>
-        <sl-details style="max-width: 320px;" summary="What is an instance?">A server running Penpot, is called an instance. Their can be many and you don't really need to choose one, commonly you only need to choose the offiical one that is ran by Penpot or to self-host your own.</sl-details>
+        <sl-details style="max-width: 320px;" summary="What is an instance?">A server running Penpot, is called an instance. There can be many and you don't really need to choose one, commonly you only need to choose the offiical one that is ran by Penpot or to self-host your own.</sl-details>
     </div>
 </div>
 
