--- a/src/base/components/alerts/no-instance.html
+++ b/src/base/components/alerts/no-instance.html
@@ -1,5 +1,5 @@
 <sl-alert id="noinstance" variant="warning">
     <sl-icon slot="icon" name="exclamation-triangle"></sl-icon>
     <strong>No Instance Detected</strong><br />
-    Your instance setting is not set, please set one. <a href="#" onclick="localStorage.setItem('Instance', 'https://design.penpot.app/'); window.api.send('ReloadApp')">Reset Setting</a>
+    Your instance setting is not set, please set one. <a href="#" onclick="localStorage.setItem('Instance', 'https://design.penpot.app/'); window.api.send('ReloadApp')">Reset Instance</a>
 </sl-alert>
