--- a/src/base/components/settings.html
+++ b/src/base/components/settings.html
@@ -7,7 +7,25 @@
             <input style="width: -webkit-fill-available;" id="InstanceField" type="url" pattern="https?://.*" placeholder="https://design.penpot.app/" value=""/>
             <input id="InstanceSaveButton" type="button" value="Save" onclick="InstanceSave()" />
         </div>
-        <sl-details style="max-width: 320px;" summary="What is an instance?">A server running Penpot, is called an instance. There can be many and you don't really need to choose one, commonly you only need to choose the offiical one that is ran by Penpot or to self-host your own.</sl-details>
+    </div>
+    <!-- <div class="settings-section">
+        <div class="settings-section-header">
+            <h2>Theme</h2>
+        </div>
+        <div id="theme" class="settings-section-content">
+            <div onclick="localStorage.setItem('theme', 'light'); document.body.classList.add('theme-is-light'); document.body.classList.remove('theme-is-dark')" id="theme-select-light" class="theme-selection"><p>Light</p></div>
+            <div onclick="localStorage.setItem('theme', 'dark'); document.body.classList.add('theme-is-dark'); document.body.classList.remove('theme-is-light')" id="theme-select-dark" class="theme-selection"><p>Dark</p></div>
+        </div>
+    </div> -->
+    <div class="settings-section">
+        <div class="settings-section-header">
+            <h2>Help</h2>
+        </div>
+        <div class="settings-section-content">
+            <div style="display: flex; gap: 12px; justify-content: space-evenly; flex: auto;">
+                <a href="#" onclick="window.api.send('OpenHelp')">Help</a>
+                <a href="#" onclick="window.api.send('OpenOffline')">Selfhost</a>
+            </div>
+        </div>
     </div>
 </div>
-
