--- a/src/base/styles/index.scss
+++ b/src/base/styles/index.scss
@@ -1,5 +1,22 @@
-body {
+.theme-is-light {
+    background: #ffffff;
+    .titlebar {
+        filter: invert(1)
+    }
+    #theme-select-light {
+        border-color: #00ff89;
+        color: #00ff89;
+    }
+}
+.theme-is-dark {
     background: #18181a;
+    #theme-select-dark {
+        border-color: #00ff89;
+        color: #00ff89;
+    }
+}
+
+body {
     font-family: arial;
 }
 
@@ -94,6 +111,64 @@ drag {
             border: none;
             border-radius: 4px;
             padding: 0px 12px;
+        }
+    }
+}
+
+div#theme {
+    display: flex;
+    justify-content: space-evenly;
+    gap: 12px;
+}
+.theme-selection {
+    border: 2px #7d7d7d solid;
+    border-radius: 10px;
+    padding: 12px 32px;
+    width: 100%;
+    text-align: center;
+}
+.theme-selection p {
+    margin: 0px;
+}
+div#theme-select-light {
+    color: black;
+    background: white;
+}
+div#theme-select-dark {
+    color: white;
+    background: #232222;
+}
+.settings-section-content a {
+    background: #3c413e;
+    color: white;
+    text-decoration: none;
+    padding: 12px 24px;
+    border-radius: 10px;
+    width: 100%;
+    text-align: center;
+    cursor: default;
+}
+
+.no-tabs-exist {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    text-align: center;
+    img {
+        width: 54px;
+    }
+    button {
+        color: black;
+        background: #00ff89;
+        border: none;
+        border-radius: 3rem;
+        padding: 12px 24px;
+        transition: 0.3s background, 0.3s color;
+        &:hover {
+            color: black;
+            background: #e6e6e6;
+            transition: 0.3s background, 0.3s color;
         }
     }
 }
